--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="form-group">
             <label for="metros">Distância Metros</label>
-            <input type="number" class="form-control" id="metros" placeholder="Metros">
+            <input type="number" disabled class="form-control" id="metros" placeholder="Metros">
         </div>
         <button type="button" id="calc" class="btn btn-primary">Converter</button>
     </form>
